# aguitest

./: .gitignore  .nycrc.json  LICENSE  Makefile  README.md  agent_example.py  agent_server.py  chat.html  console_agent.py  esbuild.js  eslint.config.js  main.py  package-lock.json  package.json  pyproject.toml  streaming.py  test_agent.py  tsconfig.json  vite-plugin-sfc.ts  vite.config.ts
aguitest.xcodeproj/: project.pbxproj
aguitest.xcodeproj/project.xcworkspace/xcuserdata/donovan.xcuserdatad/: UserInterfaceState.xcuserstate
aguitest.xcodeproj/xcuserdata/donovan.xcuserdatad/xcschemes/: xcschememanagement.plist
python/: .coverage  agent_server.py  agui_database.py  agui_streaming.py  pyproject.toml
python/tests/: conftest.py  test_agent_server.py  test_e2e.py  test_hello.py
src/: esbuild.js  eslint.config.js  hello.ts  index.html  index.ts  package-lock.json  sfc.d.ts  sfc.ts  speech.ts  styles.css  tsconfig.json
src/components/: attach-button.sfc.html  attachment-chip.sfc.html  attachment-preview.sfc.html  attachments-container.sfc.html  chat-container.sfc.html  chat-header.sfc  chat-header.sfc.html  chat-input-container.sfc.html  chat-message.sfc.html  chat-messages.sfc.html  custom-event-display.sfc.html  debug-message.sfc.html  elements.d.ts  error-message.sfc.html  message-input.sfc.html  mic-button.sfc.html  ping-indicator.sfc.html  scroll-anchor.sfc.html  send-button.sfc.html  tool-approval-item.sfc.html  tool-approval.sfc.html  tool-call.sfc.html  tool-form.sfc.html  tool-result.sfc.html  tool-toggles.sfc.html  typing-indicator.sfc.html
static/: index.html  styles.css
stubs/: simpleeval.pyi
